fix overflow

--- a/style.css
+++ b/style.css
@@ -69,8 +69,13 @@ body {
     align-items: center;
     background-color: #b2b9b7;
     color: black;
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin-bottom: 5px;
+}
+
+#display {
+    padding: 10px;
+    overflow: auto;
 }
 
 button:hover,
